# ros2_delivery_robot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  code_review_report.md
.github/workflows/: build.yml
docs/: architecture.md
plan/: overview.md  phase1_skeleton.md  phase2_behavior_tree.md  phase3_full_system.md  phase3_milestones.md
ros2_ws/src/delivery_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/delivery_bringup/config/: delivery_manager.yaml  lifecycle_manager.yaml  nav2_params.yaml  nav2_smoke_fast.yaml  stations.yaml
ros2_ws/src/delivery_bringup/launch/: delivery.launch.py  demo.launch.py  navigation.launch.py  simulation.launch.py
ros2_ws/src/delivery_bringup/rviz/: warehouse_navigation.rviz
ros2_ws/src/delivery_core/: CMakeLists.txt  package.xml
ros2_ws/src/delivery_core/behavior_trees/: delivery_mission.xml  single_delivery.xml  single_delivery_robust.xml
ros2_ws/src/delivery_core/include/delivery_core/: delivery_executor.hpp  delivery_manager.hpp  types.hpp
ros2_ws/src/delivery_core/include/delivery_core/nodes/: check_battery.hpp  dock_at_station.hpp  navigate_to_station.hpp  report_delivery_status.hpp  wait_for_confirmation.hpp
ros2_ws/src/delivery_core/src/: delivery_executor.cpp  delivery_executor_main.cpp  delivery_manager.cpp  delivery_manager_main.cpp
ros2_ws/src/delivery_core/src/nodes/: check_battery.cpp  dock_at_station.cpp  navigate_to_station.cpp  report_delivery_status.cpp  wait_for_confirmation.cpp
ros2_ws/src/delivery_core/test/: test_bt_assembly.cpp  test_check_battery.cpp  test_delivery_executor_goal_gate.cpp  test_delivery_manager_cancel_wait.cpp  test_delivery_manager_services.cpp  test_report_delivery_status.cpp  test_stations.yaml
ros2_ws/src/delivery_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/delivery_interfaces/action/: ExecuteDelivery.action
ros2_ws/src/delivery_interfaces/msg/: DeliveryOrder.msg  DeliveryStatus.msg  StationInfo.msg
ros2_ws/src/delivery_interfaces/srv/: CancelOrder.srv  GetDeliveryReport.srv  SubmitOrder.srv
ros2_ws/src/delivery_lifecycle/: CMakeLists.txt  package.xml
ros2_ws/src/delivery_lifecycle/include/delivery_lifecycle/: delivery_lifecycle_manager.hpp
ros2_ws/src/delivery_lifecycle/src/: delivery_lifecycle_manager.cpp
ros2_ws/src/delivery_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/delivery_simulation/maps/: warehouse.pgm  warehouse.yaml
ros2_ws/src/delivery_simulation/rviz/: delivery.rviz
ros2_ws/src/delivery_simulation/worlds/: warehouse.sdf
scripts/: smoke_test.sh
