<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the delivery robot system</description>
  <maintainer email="wen@todo.todo">wen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>delivery_core</exec_depend>
  <exec_depend>delivery_interfaces</exec_depend>
  <exec_depend>delivery_lifecycle</exec_depend>
  <exec_depend>delivery_simulation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
