<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_core</name>
  <version>0.1.0</version>
  <description>Core delivery robot logic: order management, navigation orchestration</description>
  <maintainer email="wen@todo.todo">wen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>delivery_interfaces</depend>
  <depend>std_srvs</depend>

  <build_depend>yaml-cpp</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
