<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_lifecycle</name>
  <version>0.1.0</version>
  <description>Lifecycle management for delivery robot nodes</description>
  <maintainer email="wen@todo.todo">wen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
