<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_simulation</name>
  <version>0.1.0</version>
  <!-- 本包为配送机器人的仿真资源包，负责提供世界、地图、模型和 RViz 配置。
       它本身不实现配送业务逻辑，而是为 delivery_bringup / Nav2 / Gazebo 提供静态资源。 -->
  <description>Gazebo simulation resources for the delivery robot</description>
  <maintainer email="wen@todo.todo">wen</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖：使用 ament_cmake 作为构建系统。
       虽然本包没有可执行代码，但仍需要 ament_cmake 来安装资源目录并生成包索引。 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖：ros_gz_sim（Gazebo Harmonic 的 ROS 2 集成）。
       delivery_bringup 会用它启动仿真世界、加载 .sdf 文件并生成机器人。 -->
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- 运行时依赖：ros_gz_bridge。
       它负责把 Gazebo 内部传感器和里程计数据桥接成 ROS 2 话题，
       让 Nav2、AMCL 和调试工具能看到仿真中的真实状态。 -->
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- 声明构建类型为 ament_cmake，供 colcon 识别本包的构建方式 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
